Retail Lending-Production/src/objects/Bank_Rates__c.object
<CustomObject>
    <fields>
        <fullName>ADF__c</fullName>
        <label>ADF</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ANCIL_CHG__c</fullName>
        <label>Ancil.Chg</label>
        <picklist>
            <picklistValues>
                <fullName>NOT ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <picklist>
            <picklistValues>
                <fullName>HDFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD CHARTERED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIABULLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEUTSCHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ING VYSYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOTAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITIBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEUTSCHE POST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDELWEISS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_company__c</fullName>
        <description>Enter the bank name</description>
        <inlineHelpText>Enter the name of the Bank&quot;Eg:Axis Bank&quot;.</inlineHelpText>
        <label>Banker company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banking_individual__c</fullName>
        <label>Banker Individual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banks_list__c</fullName>
        <label>Banks List</label>
        <picklist>
            <picklistValues>
                <fullName>HDFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAN-CHART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIABULLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEUTSCHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ING-VYSYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOTAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEUTSCHE POST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDELWEISS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Base_Rate__c</fullName>
        <label>Base Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City_of_property__c</fullName>
        <label>City of property</label>
        <picklist>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi &amp; NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_of_work__c</fullName>
        <label>City of  work</label>
        <picklist>
            <controllingField>Residency_Status__c</controllingField>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi&amp;NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HongKong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuwait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saudi Arabia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_type__c</fullName>
        <description>Enter related value from list</description>
        <inlineHelpText>Enter the Company Which He/She Working for&quot;Eg:Agriculture,Banking,etc&quot;.</inlineHelpText>
        <label>Company type</label>
        <picklist>
            <controllingField>Employment__c</controllingField>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Ltd,</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Depriciation_co_y1__c</fullName>
        <label>Depriciation co y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depriciation_y1__c</fullName>
        <inlineHelpText>Enter current year depreciation</inlineHelpText>
        <label>Depriciation y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Banks__c</fullName>
        <label>Display Banks</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <description>Choose type for  employment</description>
        <inlineHelpText>Choose the Type of Employment like&quot;Salaried,Salaried Professional,Self Employed Business&quot; etc.</inlineHelpText>
        <label>Type Of Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed Non Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Franking_Fee__c</fullName>
        <label>Franking  Fee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Upto__c</fullName>
        <label>Funding Upto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Yr_1__c</fullName>
        <inlineHelpText>Enter the gross receipts/Turn over of the current year</inlineHelpText>
        <label>Gross Profit Yr 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_co_y1__c</fullName>
        <label>Gross Profit  co y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <description>Enter the Period time for lease</description>
        <inlineHelpText>Enter tenure of lease .</inlineHelpText>
        <label>Lease Term(1)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_amount1__c</fullName>
        <description>Enter the amount for monthly rent</description>
        <inlineHelpText>Enter the amount of monthly rent&quot;Eg:Rs 40000&quot;.</inlineHelpText>
        <label>Lease amount1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_due_term1__c</fullName>
        <description>Enter the period for unexpired tenure</description>
        <inlineHelpText>Less than 11 months cant be treated as Loan</inlineHelpText>
        <label>lease due term1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lessee_name1__c</fullName>
        <label>Lessee name1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Requested_SAL__c</fullName>
        <inlineHelpText>Enter the amount for the loan requested Eg: Rs 400000.</inlineHelpText>
        <label>Loan Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Tenure_Requested__c</fullName>
        <description>Enter the reason for loan tenure request</description>
        <inlineHelpText>Enter period for loan tenure requested&quot;Eg:6 Months&quot;.</inlineHelpText>
        <label>Loan Tenure Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Age__c</fullName>
        <label>Max Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Builtup_Area__c</fullName>
        <label>Max Builtup Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Amount__c</fullName>
        <label>Max Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Plot_size__c</fullName>
        <label>Max Plot size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Purchase_Cost__c</fullName>
        <label>Max Purchase Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Salary__c</fullName>
        <label>Max Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Tenure__c</fullName>
        <inlineHelpText>Please Enter In Months</inlineHelpText>
        <label>Max Tenure</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Age__c</fullName>
        <label>Min Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Builtup_Area__c</fullName>
        <label>Min Builtup Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Loan_Amount__c</fullName>
        <label>Min Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Plot_size__c</fullName>
        <label>Min Plot size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Purchase_Cost__c</fullName>
        <label>Min Purchase Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Salary__c</fullName>
        <label>Min Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Tenure__c</fullName>
        <inlineHelpText>Please Enter In Months</inlineHelpText>
        <label>Min Tenure</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mort__c</fullName>
        <label>Mortg Fee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P__c</fullName>
        <label>Parallel Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreClosure__c</fullName>
        <label>PreClosure</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proc_Fee_incl_tax__c</fullName>
        <label>Proc Fee(incl tax)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>The products of Retail lending</description>
        <inlineHelpText>Choose the product name Eg: Home Loan,Balance Transfer,etc.</inlineHelpText>
        <label>Select the Loan</label>
        <picklist>
            <controllingField>Property_use__c</controllingField>
            <picklistValues>
                <fullName>Home Loan / Property Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan / Property Not Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan Balance Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property (BT / BTTP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Rental Discounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan / Property Selected ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan / Property Not Selected ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan Balance Transfer ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property (BT / BTTP) ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Rental Discounting ( C )</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bank Rates</relationshipLabel>
        <relationshipName>Bank_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Approved__c</fullName>
        <label>Project Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Enter the project name</description>
        <inlineHelpText>Enter the project name:Eg:My homes&quot;.</inlineHelpText>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_appr__c</fullName>
        <description>Confirm Builder property approved are not</description>
        <inlineHelpText>Choose whether property approved by builder&quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Project appr</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_appr_banks__c</fullName>
        <description>Enter the bank name</description>
        <inlineHelpText>Enter the name of the Bank&quot;Eg:Axis Bank&quot;.</inlineHelpText>
        <label>Project appr bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prop_Age__c</fullName>
        <description>Enter the age of the property</description>
        <inlineHelpText>Enter the age of the property&quot;Eg:25 yrs,30 yrs&quot;.</inlineHelpText>
        <label>Prop Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prop_Builtup__c</fullName>
        <inlineHelpText>Enter the size of Built-up area&quot;Eg:1000 Sft&quot;.</inlineHelpText>
        <label>Prop_Built-up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prop_Community_Name__c</fullName>
        <description>Enter the community name</description>
        <inlineHelpText>Enter the name of the gated community&quot;Eg:Sweet Homes&quot;.</inlineHelpText>
        <label>Prop Community Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prop_Const_Stage__c</fullName>
        <label>Prop Const Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Deviation__c</fullName>
        <description>Enter the deviation in the filed</description>
        <inlineHelpText>Choose whether there is deviation in plan &quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Prop Deviation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Deviation_p__c</fullName>
        <label>Prop Deviation%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prop_Gated_Community__c</fullName>
        <description>Choose whether it is a gated community or not</description>
        <inlineHelpText>Choose whether  it is Gated Community&quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Prop Gated Community</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Location__c</fullName>
        <description>Enter the location</description>
        <inlineHelpText>Enter the name of the location&quot;Eg:Indira nagar ,koramangla etc&quot;.</inlineHelpText>
        <label>Prop Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prop_Plot_size__c</fullName>
        <description>Enter the Size of the plot</description>
        <inlineHelpText>Enter the size of Plot &quot;Eg:250 Sft,300 Sft&quot;.</inlineHelpText>
        <label>Prop Plot size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prop_Purchase_Through__c</fullName>
        <label>Prop Purchase Through</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder Resale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Resale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Purchase_from__c</fullName>
        <description>Choose the type of property</description>
        <inlineHelpText>Choose the type of property&quot;Eg:Assignment Property,Builder Property&quot;.</inlineHelpText>
        <label>Prop Purchase From</label>
        <picklist>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Type__c</fullName>
        <description>choose the property type</description>
        <inlineHelpText>Choose the type of the property&quot;Eg:Apartment,Land,Composite,Etc&quot;.</inlineHelpText>
        <label>Prop Type</label>
        <picklist>
            <controllingField>Product_Name__c</controllingField>
            <picklistValues>
                <fullName>Apartment / Villa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land / Plot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension / Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Office / Showroom / Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Construction on own land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Land Purchase+Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Extension / Renovation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_cmv__c</fullName>
        <description>Enter the current Market Value amount</description>
        <inlineHelpText>Enter the amount for Current market value&quot;Eg:Rs 800000&quot;.</inlineHelpText>
        <label>Prop CMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prop_occupancy__c</fullName>
        <description>Choose the type of the property</description>
        <inlineHelpText>Choose the type of the property&quot;Eg:Commercial/rented out,Residential/Rented out&quot;.</inlineHelpText>
        <label>Prop Occupancy</label>
        <picklist>
            <picklistValues>
                <fullName>Self occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rented Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_total_Cost__c</fullName>
        <label>Prop total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_use__c</fullName>
        <label>Property use</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_OD_Loan__c</fullName>
        <label>Rate O/D Loan</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Std__c</fullName>
        <label>ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rented_to1__c</fullName>
        <description>Choose whether the property is rented to a company are not</description>
        <inlineHelpText>Choose whether the property is rented to a company &quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Leased to 1</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Brand-Properitorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Brand-Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Brand-Pvt Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Properitorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pvt Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residency_Status__c</fullName>
        <label>Residency Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resident Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foriegn Nation of Indian Orgin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salary_gross__c</fullName>
        <label>salary gross</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>